	Italy and England got flag changes that are more... compatible with the canon.
	Great Britain can be formed.
	Further Middle Eastern border revisions.
	Mordva has seen the light of God, to give them a fair chance at survival.
	Trebizond is historical pals with Byzantium now; as is France with Borgonha-Franca.

Changelog (v0.3.2):
	Changed the borders of the Holy Roman Empire.

Changelog (v0.3.3):
	Byzantium, Ireland, Burgundy and al-Andalus no longer have shitty generic ideas.

Changelog (v0.3.4):
	Expanded the number of princely states in the HRE to prevent IA from tanking immediately.
	Corrected some issues with the HRE's internals.

Changelog (v0.3.5):
	Added localization to Irish and Burgundian ideas
	Changed Egypt-Abyssinia border
	Made Greater Poland an elector.

Changelog (v0.4, 'Polish Update'):
	Kingdom of Poland can now be formed by any Polish realm.

Changelog (v0.4.3):
	Hejaz's flag is now corrected, it no longer bears Islamic imagery.
	
Changelog (v0.4.4):
	Further border revisions in the Holy Roman Empire, more princely states to expand the dynamic politics of the region.
	
Changelog (v0.5):
	Massive expansion of China in-universe lore!
	Fixed some bugs with Greater Poland's de-jure capital.
	Other tweaks and fixes to make the experience better. This will likely be the 'release' that we use to play our campaign.
	
Changelog (v0.6):
	Native American nations of Creek, Shawnee and Cherokee made stronger to counter-act European imperialism.
	Minor adjustments made to other areas.
	
Changelog (v0.6.1):
	Adjustment to Native tribes to make them stronger.
	
Changelog (v0.6.2):
	Some minor adjustments to Europe.

Changelog (v0.6.3):
	Changed religious composition of Bengal and parts of Southeast Asia.

Changelog (v0.7):
	Changed religious composition and improved the borders of Near-Eastern Europe and Central Asia.

Changelog (v0.7.1):
	Changes to borders in the Central Asia and Far East regions, and improvements to the general design of the mod.