@@ -20,3 +20,11 @@
  NAP: "Magna Graecia"
  NAP_ADJ: "Magna Graecian"
  free_pass: "Population Revolution"
+ feminism.1.t: "Princess Azan..."
+ feminism.1.d: "Your reign is increasingly unpopular, as the countryside increasingly looks towards your distant cousin, the Princess Azan, whose fair and just governance of the provinces echoes far and wide. You must now decide on the future of the Andalusian people."
+ feminism.1.a: "Long live Azan, Calipha of Andalus!"
+ feminism.1.b: "We have long needed a watchful eye. You do us well, Azan."
+ feminism.2.t: "The Bastard"
+ feminism.2.d: "A young man has arrived in your court, to challenge you to a duel. The young man, Joshua, says he is the rightful King of France and Borgonha. The tension is very thick."
+ feminism.2.a: "$MONARCH met an unfortunate end at the tip of a bastard's blade."
+ feminism.2.b: "$MONARCH and the young Joshua become eternal friends."
