@@ -123,3 +123,6 @@ Changelog (v0.7):
 
 Changelog (v0.7.1):
 	Changes to borders in the Central Asia and Far East regions, and improvements to the general design of the mod.
+
+Changelog (v0.7.2):
+	Added new events to the campaign, and improved some stuff in the process!
